@@ -425,7 +425,19 @@ AC_ARG_ENABLE(etwin,
 )
 
 if test ! -z "$FOUND_SCREEN" || test ! -z "$FOUND_LIBTWIN"; then
-  AC_DEFINE(ESCREEN, , [Define for Escreen support.])
+    AC_DEFINE(ESCREEN, , [Define for Escreen support.])
+    AC_MSG_CHECKING(for Escreen startup effects)
+    AC_ARG_ENABLE(escreen-fx, [  --enable-escreen-fx     enable Escreen startup effects], [
+            if test "$enableval" = "yes"; then
+                AC_MSG_RESULT(yes)
+                AC_DEFINE(ESCREEN_FX, , [Define to enable Escreen startup effects.])
+            else
+                AC_MSG_RESULT(no)
+            fi
+        ], [
+            AC_MSG_RESULT(no)
+        ]
+    )
 fi
 
 AC_MSG_CHECKING(if profiling macros should be included)
@@ -927,7 +939,7 @@ fi
 
 dnl# Enable/disable name reporting escape sequences
 AC_MSG_CHECKING(if we should enable name reporting escape sequences)
-AC_ARG_ENABLE(name-eporting-escapes, [  --enable-name-reporting-escapes  Specify this to enable title/icon name reporting], [
+AC_ARG_ENABLE(name-reporting-escapes, [ --enable-name-reporting-escapes  Specify this to enable title/icon name reporting], [
               if test "$enableval" = "yes"; then
                   AC_MSG_RESULT(yes)
                   AC_DEFINE(ENABLE_NAME_REPORTING_ESCAPES, 1, [Defined to enable title/icon name reporting escape sequences.])
